app-docker-desktop.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-docker-desktop
  labels:
    app: demo-docker-desktop
spec:
  type: LoadBalancer
  selector:
    app: demo-docker-desktop
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-docker-desktop
  labels:
    app: demo-docker-desktop
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-docker-desktop
        octopusexport: OctopusExport
    spec:
      containers:
        - name: demo-docker-desktop
          image: tuxtor/demo-docker-desktop
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
